--- a/website_ouderavond.html
+++ b/website_ouderavond.html
@@ -1,32 +1,68 @@
 <!DOCTYPE html>
 <html lang="nl">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Ouderavond - Hoornbeeck College</title>
-<link rel="stylesheet" href="ouderavond.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ouderavond Hoornbeeck College</title>
+  <link rel="stylesheet" href="test_ouderavond.css">
 </head>
 <body>
-<header>
-<h1>Welkom op de Ouderavond</h1>
-<p>Hoornbeeck College - woensdag 15 oktober 2025</p>
-<hr>
-</header>
-<nav>
-<ul>
-<li><a href="website_ouderavond.html">home</a></li>
-<li><a href="programma.html">Programma</a></li>
-<li><a href="locatie.html">Locatie</a></li>
-<li><a href="contact.html">Contact</a></li>
-<li><a href="doel.html">doel</a></li>
-</ul>
-</nav>
-<main>
-<h2>Wat kunt u verwachten?</h2>
-<p>We nodigen alle ouders van harte uit voor een inspirerende avond met presentaties, gesprekken met docenten en een blik op de toekomst van uw zoon of dochter op het Hoornbeeck College.</p>
-</main>
+
+  <header>
+    <img src="C:\school\programeren\website_ouderavond\test_ouderavond\logo-hoornbeeck.png" alt="Hoornbeeck College logo" class="logo">
+    <h1>Welkom op de Ouderavond ICT</h1>
+  </header>
+
+ <nav>
+    <ul class="menu">
+      <li><a href="test_ouderavondwebsite.html">Home</a></li>
+      <li><a href="over_hoornbeeck.html">Over het Hoornbeeck</a></li>
+      <li class="dropdown">
+        <a href="#">Over de Ouderavond</a>
+        <ul class="dropdown-content">
+          <a href="doel.html">Doel</a>
+          <a href="organisatie.html">Organisatie</a>
+          <a href="plattegrond.html">Plattegrond</a>
+          <a href="programma.html">programma</a>
+        </ul>
+      </li>
+      <li><a href="opleidingen.html">ICT Opleidingen</a></li>
+      <li><a class="active" href="sfeerbeelden.html">Sfeerbeelden</a></li>
+      <li><a href="ontwikkelaar.html">Over de ontwikkelaar</a></li>
+    </ul>
+  </nav>
+
+
+  <div class="container">
+    <main>
+      <div class="container">
+  <main>
+    <h2>Welkom ouders en verzorgers</h2>
+    <p>Op woensdag 15 oktober bent u van harte welkom voor een inspirerende avond vol informatie, gesprekken en demonstraties.</p>
+    <img src="C:\school\programeren\website_ouderavond\test_ouderavond\9.jpg" alt="ICT les in actie" class="featured-img">
+  </main>
+
+    <aside class="sidebar">
+      <h3>Wetenswaardigheden</h3>
+      <ul>
+        <li>De ouderavond start om 19:30 uur.</li>
+        <li>Locatie: Hoornbeeck College,Willem Hendrik Zwartallee 1.</li>
+        <li>Parkeren kan op het parkeerterrein aan de voorzijde.</li>
+        <li>Er is een mogelijkheid om vragen te stellen aan docenten.</li>
+        <li>Koffie en thee is beschikbaar.</li>
+      </ul>
+    </aside>
+  </div>
+
+      <h2>Welkom ouders en verzorgers</h2>
+      <p>Op woensdag 15 oktober bent u van harte welkom voor een inspirerende avond vol informatie, gesprekken en demonstraties.</p>
+      <img src="C:\school\programeren\website_ouderavond\test_ouderavond\foto-ICT-kids.png" alt="ICT les in actie" class="featured-img">
+    </main>
 <footer>
-<p>Contact: <a href="mailto:info@hoornbeeck.nl">info@hoornbeeck.nl</a></p>
+  <p>Hoornbeeck College | Willem Hendrik Zwartallee 1, 8265 TZ Kampen</p>
+  <p>&copy; 2025 Hoornbeeck College. Alle rechten voorbehouden.</p>
 </footer>
+
 </body>
 </html>
+  
